--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                     <div class="info-item">
                         <i class="fas fa-envelope"></i>
                         <div>
-                            <h3>For business inquires <a href="mailto:webxcomp@gmail.com?subject=Business Inquiry&body=<b>Hello</b>">Email</a></h3>
+                            <h3>For business inquires <a href="mailto:info@webxcomp.com?subject=Business Inquiry&body=<b>Hello</b>">Email</a></h3>
                         </div>
                     </div>
                 </div>
