--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
         </div>
         <div class="nav-links">
             <a href="#home">Home</a>
-            <a href="#services">Services</a>
+            <a href="#services">Services&nbsp;&nbsp;</a>
+            <a href="#">&nbsp;&nbsp;&nbsp;&nbsp;</a>
             <a href="#contact">Contact</a>
         </div>
         <div class="menu-btn">
@@ -45,7 +46,7 @@
             </div>
         </div>
         <div class="hero-image">
-            <img src="ai-illustration.svg" alt="AI Web Development">
+            <img src="aiillustration.svg" alt="AI Web Development">
         </div>
     </section>
 
@@ -166,7 +167,13 @@
                     <div class="info-item">
                         <i class="fas fa-envelope"></i>
                         <div>
-                            <h3>For business inquires <a href="mailto:info@webxcomp.com?subject=Business Inquiry&body=<b>Hello</b>">Email</a></h3>
+                            <h3>Business inquires</h3> <a href="mailto:webxcomp@gmail.com?subject=Business Inquiry&body=<b>Hello</b>">Email</a>
+                        </div>
+                    </div>
+                    <div class="info-item">
+                        <i class="fas fa-project-diagram"></i>
+                        <div>
+                            <h3>Projects</h3><br><a href="https://cornersbarbershop.com/" target="_blank">Barbershop</a>
                         </div>
                     </div>
                 </div>
