--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
         </div>
     </section>
 
-    <section id="services" class="services">
+    <section id="services" class="contact">
+        <div class="container">
+        <h2>Services</h2>
         <div class="services-grid">
             <div class="flip-card">
                 <div class="flip-card-inner">
@@ -156,6 +158,7 @@
                     </div>
                 </div>
             </div>
+        </div>
         </div>
     </section>
 
