--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </div>
         </div>
         <div class="hero-image">
-            <img src="aiillustration.svg" alt="AI Web Development">
+            <img src="ai-illustration.svg" alt="AI Web Development">
         </div>
     </section>
 
